# msg_rng

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: ralph-loop.local.md  settings.local.json
.github/workflows/: ci.yaml  ci.yml
examples/: basic.rs
src/: lib.rs
tests/: integration.rs
