[package]
name = "msg_rng"
version = "0.1.0"
edition = "2024"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Centralized seeded RNG functionality for Bevy games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_rng"
keywords = ["bevy", "rng", "random", "gamedev"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16", default-features = false }
rand = "0.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(bevy_lint)",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
